<resources>
    <string name="app_name">Estudiantes</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenida">Bienvenidos a la App Estudiantes TFG</string>
    <string name="Todos">Todos</string>
    <string name="Búsqueda">Búsqueda</string>
    <string name="Nuevo">Nuevo</string>
    <string name="Inicio">Inicio</string>
    <string name="Borrar">Borrar</string>
    <string name="title_activity_todos">Todos</string>
    <string name="title_activity_busqueda">Busqueda</string>
    <string name="title_activity_nuevo">Nuevo</string>
    <string name="title_activity_borrar">Borrar</string>
    <string name="Presentados">Presentados</string>
    <string name="EnDesarrollo">En desarrollo</string>
    <string name="busqueda">Introduzca los apellidos:</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido1">Primer apellido</string>
    <string name="apellido2">Segundo apellido</string>
    <string name="tema">Tema del TFG</string>
    <string name="tutor1">Director del TFG</string>
    <string name="tutor2">Co-director del TFG</string>
    <string name="estado">Estado del TFG</string>
    <string name="fecha">Fecha de presentacion</string>
    <string name="calificacion">Calificacion</string>
    <string name="crear">Crear</string>
    <string name="title_activity_widget">WidgetActivity</string>
    <string name="widget">Estudiantes</string>
</resources>
